core/decompiler/test/smali/com/hulu/physicalplayer/errors/IOError.smali
.class public Lcom/hulu/physicalplayer/errors/IOError;
.super Ljava/lang/Exception;
.source "SourceFile"


# direct methods
.method public constructor <init>()V
    .locals 0

    .line 9
    invoke-direct {p0}, Ljava/lang/Exception;-><init>()V

    return-void
.end method
